--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 body {
   background-color: #ffde59; 
 }
+.select {
+   font-size: 1em;
+   font-family: Arial;
+}
+
 
 .head {
   text-align: center;
@@ -30,13 +35,8 @@ textarea {
 }
 
 header  {
-   /* position: absolute;  Takes the element out of the normal flow */
-   margin-top: 40vh;
-   /* top: 80%;           Moves the top edge of the element to the 50% mark */
-   transform: translateY(-50%); /* Pulls the element up by half its own height, ensuring true centering */
    width: 100%;        /* Ensures the text spans the full width if needed */
    text-align: center; /* Centers text horizontally */
-   margin-bottom: 10px;
    font-family: Arial, sans-serif;
    font-size:20px;
 } 
@@ -70,6 +70,7 @@ button[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: "Telegram HPLHS";
 }
 
 
@@ -82,6 +83,7 @@ button[type=submit]:hover {
     position: relative;
     border: 1px solid #ccc;
     padding: 20px;
+    font-family: "Telegram HPLHS";
 }
  
 .bottom-panel {
